# Tilky-Engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  README_Tilky_Rust_Tools.md  config.h  main.cpp
.cargo/: config.toml
Assets/Levels/: ai_level.json  among_us.json  l.json  test_level.json
EngineAssets/AutoComplete/: luarc.txt  tilky_api.txt
EngineAssets/Local/: bg.json  en.json  pl.json  qa.json  ru.json  tr.json
EngineAssets/Local/TilkyLocalise/: Cargo.toml
EngineAssets/Local/TilkyLocalise/src/: main.rs
Headers/: UISystem.hpp
Headers/Editor/: AssetBrowser.hpp  Editor.hpp  EditorTextureCache.hpp  ImGuiDrawFunctions.hpp
Headers/Engine/: GameTime.hpp  InputManager.h  InputManager.hpp
Headers/Engine/Local/: Local.hpp
Headers/Launcher/: LauncherApp.hpp
Headers/Map/: LevelManager.hpp  LevelSerialization.hpp  MapQueries.h  MapQueries.hpp  MapTopology.hpp
Headers/MapEditor/: MapEditor.hpp
Headers/Math/: Constants.hpp  Vector2.h
Headers/Math/Geometry/: Geometry.hpp
Headers/Math/Matrix/: Matrix4.hpp
Headers/Math/SIMD/: SSECompat.hpp
Headers/Math/Vector/: Vector2.hpp  Vector2Math.hpp  Vector3.hpp  Vector3Math.hpp  Vector4.hpp
Headers/Objects/: ComponentRegistry.hpp  Components.hpp  Entity.hpp  EntityTypes.hpp  Level.hpp  LuaWrappers.hpp  Object.h  Player.hpp  RayHit.hpp  ScriptPublicType.hpp  Sector.h  Sector.hpp  Wall.h  Wall.hpp  Wrappers.hpp
Headers/Project/: ProjectManager.hpp
Headers/Renderer/: MapEditor.h  MapEditor.hpp  Renderer.h  Renderer.hpp  Shader.h  Shader.hpp  TextureManager.h  TextureManager.hpp
Headers/Renderer/Renderer/: Renderer.hpp  RendererInternal.hpp
Headers/Runtime/: CameraSystem.hpp  LevelSystem.hpp  PhysicsSystem.hpp  PlayerControllerSystem.hpp  RuntimeEditor.hpp  RuntimeSession.hpp  ScriptSystem.hpp
Headers/Runtime/Gameplay/: CameraSystem.hpp  GameFunctions.hpp  PlayerControllerSystem.hpp
Headers/Runtime/Renderer/: IRenderer.hpp  RendererBackend.hpp  RendererFactory.hpp  RendererMath.hpp
Headers/Runtime/Renderer/OpenGL/: OpenGL.hpp  OpenGLRenderer.hpp
Headers/Runtime/Renderer/Renderer/: Renderer.hpp
Headers/Runtime/Renderer/Vulkan/: VulkanRenderer.hpp
Headers/Runtime/RuntimeEditor/: EditorFunctions.hpp  RuntimeEditor.hpp
Headers/Runtime/Scripting/: IScripting.hpp  ScriptSystem.hpp
Headers/Runtime/Scripting/Lua/: LuaScripting.hpp
Headers/Runtime/Sound/: AudioSystem.hpp  SoundManager.hpp
Shaders/: frag.fs  frag.fs.glsl  vertex.vs.glsl
Shaders/Debug/: debug.fs.glsl  debug.vs.glsl
Shaders/Rendering/: Rendering.fs.glsl  Rendering.vs.glsl
Shaders/UI/: UI.fs.glsl  UI.vs.glsl
Shaders/Wall/: wallColoring.fs.glsl  wallProjection.vs.glsl
Tools/TilkyExporter/: Cargo.toml  TilkyExporter.cpp
Tools/TilkyExporter/src/: main.rs
Tools/TilkyLocalise/: Cargo.toml  TilkyLocalise.cpp
Tools/TilkyLocalise/src/: main.rs  test.json
docs/: adding_component_guide.md  localization_guide.md
resources/: TilkyIcon.rc.in
src/: UISytem.cpp
src/Editor/: AssetBrowser.cpp  Editor.cpp  EditorInternal.hpp  EditorSaveLoad.cpp  EditorState.cpp  EditorTextureCache.cpp  ImGuiDrawFunctions.cpp
src/Editor/MapEditor/: MapEditorDrawing.cpp  MapEditorGeometry.cpp  MapEditorInput.cpp  MapEditorUI.cpp
src/Editor/UIEditor/: UIEditorDraw.cpp  UIEditorInput.cpp  UIEditorUI.cpp
src/Engine/: GameTime.cpp  InputManager.cpp
src/Engine/Local/: Local.cpp
src/EngineApp/: EngineMain.cpp
src/Launcher/: LauncherApp.cpp  LauncherMain.cpp
src/Map/: LevelManager.cpp  LevelSerialization.cpp  MapQueries.cpp  MapTopology.cpp
src/MapEditor/: MapEditor.cpp  MapEditorDrawing.cpp  MapEditorGeometry.cpp  MapEditorInput.cpp  MapEditorInternal.hpp  MapEditorSaveLoad.cpp  MapEditorState.cpp  MapEditorUI.cpp
src/Math/Geometry/: Geometry.cpp
src/Objects/: Components.cpp  Entity.cpp  Level.cpp  Player.cpp
src/Project/: ProjectManager.cpp
src/Renderer/: MapEditor.cpp  Renderer.cpp  TextureManager.cpp
src/Renderer/MapEditor/: MapEditor.cpp  MapEditorDrawing.cpp  MapEditorGeometry.cpp  MapEditorInput.cpp  MapEditorInternal.hpp  MapEditorSaveLoad.cpp  MapEditorState.cpp  MapEditorUI.cpp
src/Renderer/Renderer/: RendererDebug.cpp  RendererDecals.cpp  RendererDestroy.cpp  RendererInit.cpp  RendererInternal.hpp  RendererMapBuild.cpp  RendererMath.cpp  RendererSprites.cpp  RendererState.cpp  RendererText.cpp  RendererUI.cpp  RendererUpdate.cpp
src/Runtime/: CollisionSystem.cpp  LevelSystem.cpp  PhysicsSystem.cpp  PlayerControllerSystem.cpp  RuntimeEditor.cpp  RuntimeSession.cpp  ScriptSystem.cpp
src/Runtime/Gameplay/: GameFunctions.cpp  PlayerControllerSystem.cpp
src/Runtime/Renderer/: RendererFactory.cpp  RendererMath.cpp
src/Runtime/Renderer/OpenGL/: OpenGL.cpp  OpenGLBackground.cpp  OpenGLCollider.cpp  OpenGLDecal.cpp  OpenGLDestroy.cpp  OpenGLInit.cpp  OpenGLMapBuild.cpp  OpenGLRenderer.cpp  OpenGLSector.cpp  OpenGLSprite.cpp  OpenGLText.cpp  OpenGLTexture.cpp  OpenGLUI.cpp  OpenGLUpdate.cpp  RenderBackground.cpp  RendererDecals.cpp  RendererDestroy.cpp  RendererInit.cpp  RendererMapBuild.cpp  RendererSectors.cpp  RendererSprites.cpp  RendererText.cpp  RendererTexture.cpp  RendererUI.cpp  RendererUpdate.cpp
src/Runtime/Renderer/Renderer/: RenderBackground.cpp  RendererInternal.hpp  RendererMapBuild.cpp  RendererState.cpp  RendererText.cpp  RendererUpdate.cpp
src/Runtime/Renderer/Vulkan/: VulkanRenderer.cpp
src/Runtime/Runtime Editor/: RuntimeEditor.cpp
src/Runtime/RuntimeEditor/: EditorFunctions.cpp  RuntimeEditor.cpp
src/Runtime/Scripting/: ComponentBindings.cpp  EditorFunctionBindings.cpp  EntityBindings.cpp  GameBindings.cpp  InputBindings.cpp  MathBindings.cpp  ScriptSystem.cpp  VectorBindings.cpp
src/Runtime/Scripting/Lua/: ComponentBindings.cpp  EntityBindings.cpp  GameBindings.cpp  InputBindings.cpp  LuaComponentBindings.cpp  LuaEditorFunctionBindings.cpp  LuaEntityBindings.cpp  LuaGameBindings.cpp  LuaInputBindings.cpp  LuaMathBindings.cpp  LuaSectorBindings.cpp  LuaSystem.cpp  (+7 more)
src/Runtime/Sound/: AudioSystem.cpp  SoundManager.cpp
src/Standalone/: StandaloneMain.cpp
